# snake-opengl

./: .gitignore  CMakeLists.txt  apple.cpp  apple.hpp  apple_renderer.cpp  apple_renderer.hpp  board.cpp  board.hpp  game.cpp  game.hpp  glfw_system.cpp  glfw_system.hpp  keys_input.cpp  keys_input.hpp  main.cpp  make_program.cpp  make_program.hpp  renderer.cpp  renderer.hpp  runtime.cpp  runtime.hpp  snake.cpp  snake.hpp  snake_controller.cpp  snake_controller.hpp  snake_renderer.cpp  snake_renderer.hpp  virtual_keys.hpp  window.cpp  window.hpp
shaders/: snake.frag  snake.geom  snake.vert
